feat: target inode check to prevent duplicates and library link deduplication
